--- a/BD/GoTravel/views/detalle.html
+++ b/BD/GoTravel/views/detalle.html
@@ -38,7 +38,7 @@
     <div class="row g-4"> 
         {{#activities}}
         <div class="col-12 col-md-6 col-sm-2" >
-            <div class="p-4 bg-white rounded shadow">
+            <div class="p-4 bg-white rounded shadow h-100" id="activity-card-{{_id}}">
                 <h3 class="text-center">{{name}}</h3>
                 <ol>
                     <li><strong>Fee:</strong> {{price}}€</li>
@@ -46,21 +46,29 @@
                     <li><strong>Turistic guide:</strong> {{guide_travel}}</li>
                 </ol>
                 <p class="item">{{description}}</p>
-                <div class="d-flex justify-content-center">
-                    <a href="/edit/activity/{{_id}}" class="btn btn-danger btn-lg">Edit the activity</a>
-                    <form action="/delete/activity/{{_id}}" method="POST" style="display: inline;">
-                        <button id="btnDeleteTrigger" 
-                    data-id="{{activity._id}}" 
-                    class="btn btn-danger btn-lg" 
-                    data-bs-toggle="modal" 
-                    data-bs-target="#deleteEntities">
-                Delete the trip
-            </button>
-                    </form>
+                <div class="d-flex justify-content-center gap-2 mt-3">
+                    <button type ="button" 
+                            class="btn btn-warning btn-lg btnEditActivity"
+                            data-id="{{_id}}"
+                            data-name="{{name}}"
+                            data-price="{{price}}"
+                            data-duration="{{duration}}"
+                            data-guide="{{guide_travel}}"
+                            data-description="{{description}}">
+                        Edit Activity
+                    </button>
+                    <button type="button" 
+                            class="btn btn-danger btn-lg btnOpenDeleteActivityModal"
+                            data-id="{{_id}}"
+                            data-bs-toggle="modal"
+                            data-bs-target="#deleteActivityModal">
+                        Delete Activity
+                    </button>
                 </div>
             </div>
         </div>
         {{/activities}}
+        
         {{^activities}}
             <p class="text-center text-muted">There are no activities scheduled for this trip yet.</p>
         {{/activities}}
@@ -129,6 +137,24 @@
     </div>
 </div>
 
+//Modal delete activity
+<div class="modal fade" id="deleteActivityModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header bg-danger text-white">
+                <h5 class="modal-title">Confirm Deletion</h5>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this activity?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" id="btnConfirmDeleteActivity">Delete Activity</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script>
     document.addEventListener('DOMContentLoaded', () => {
