fix delete trip button

--- a/BD/GoTravel/views/detalle.html
+++ b/BD/GoTravel/views/detalle.html
@@ -28,7 +28,7 @@
                     data-id="{{trip._id}}" 
                     class="btn btn-danger btn-lg" 
                     data-bs-toggle="modal" 
-                    data-bs-target="#deleteEntities">
+                    data-bs-target="#deleteTripModal">
                 Delete the trip
             </button>
         </div>
