--- a/BD/GoTravel/views/partials/footer.html
+++ b/BD/GoTravel/views/partials/footer.html
@@ -23,12 +23,12 @@
             </div>
         </div>
         <div class="col-12 col-sm-6 col-lg-4 text-center">
-            <a href="https://github.com/CodeURJC-FW-2025-26/webapp15">github repository</a>
+            <a href="https://github.com/CodeURJC-FW-2025-26/webapp15">link portfolio</a>
         </div>
     </div> 
     <p class="footer-text text-center">© 2025 GoTravel - All rights reserved</p>
 </footer>
 
-<script src="/js/script.js"></script>
+<script src="/script.js"></script>
 </body>
 </html>
